--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>common/foodie-cloud-shared-pojo</module>
         <module>plateform/registry-center</module>
         <module>common/foodie-cloud-web-components</module>
+        <module>domain/item/foodie-item-pojo</module>
+        <module>domain/item/foodie-item-mapper</module>
     </modules>
 
     <packaging>pom</packaging>
