--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>domain/item/foodie-item-api</module>
         <module>domain/item/foodie-item-service</module>
         <module>domain/item/foodie-item-web</module>
+        <module>domain/user/foodie-user-pojo</module>
     </modules>
 
     <packaging>pom</packaging>
