--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>domain/item/foodie-item-service</module>
         <module>domain/item/foodie-item-web</module>
         <module>domain/user/foodie-user-pojo</module>
+        <module>domain/user/foodie-user-mapper</module>
     </modules>
 
     <packaging>pom</packaging>
