拆分 用户中心 - api [引入了Redis]

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>domain/item/foodie-item-web</module>
         <module>domain/user/foodie-user-pojo</module>
         <module>domain/user/foodie-user-mapper</module>
+        <module>domain/user/foodie-user-api</module>
     </modules>
 
     <packaging>pom</packaging>
