拆分 用户中心 - service

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>domain/user/foodie-user-pojo</module>
         <module>domain/user/foodie-user-mapper</module>
         <module>domain/user/foodie-user-api</module>
+        <module>domain/user/foodie-user-service</module>
     </modules>
 
     <packaging>pom</packaging>
