--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>domain/user/foodie-user-mapper</module>
         <module>domain/user/foodie-user-api</module>
         <module>domain/user/foodie-user-service</module>
+        <module>domain/user/foodie-user-web</module>
     </modules>
 
     <packaging>pom</packaging>
