拆分 购物车中心 - 完成，接口已调通

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
         <module>domain/order/foodie-order-api</module>
         <module>domain/order/foodie-order-service</module>
         <module>domain/order/foodie-order-web</module>
+        <module>domain/cart/foodie-cart-pojo</module>
+        <module>domain/cartfoodie-cart-mapper</module>
+        <module>domain/cart/foodie-cart-mapper</module>
+        <module>domain/cart/foodie-cart-api</module>
+        <module>domain/cart/foodie-cart-service</module>
+        <module>domain/cart/foodie-cart-web</module>
     </modules>
 
     <packaging>pom</packaging>
