拆分 user order item 集成Feign [实现了服务间的调用]

--- a/domain/item/foodie-item-web/src/main/resources/application.yml
+++ b/domain/item/foodie-item-web/src/main/resources/application.yml
@@ -17,6 +17,8 @@ server:
 spring:
   application:
     name: foodie-item-service
+  main:
+    allow-bean-definition-overriding: true   # 当Bean的名字一样时  允许覆盖
   profiles:
     active: dev
   datasource:
