--- a/domain/order/foodie-order-web/src/main/resources/application.yml
+++ b/domain/order/foodie-order-web/src/main/resources/application.yml
@@ -17,6 +17,8 @@ server:
 spring:
   application:
     name: foodie-order-service
+  main:
+    allow-bean-definition-overriding: true
   profiles:
     active: dev
   datasource:
