--- a/plateform/registry-center/src/main/resources/application.yml
+++ b/plateform/registry-center/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
   profiles:
     active: dev
 
+
 server:
   port: 20000
 
@@ -16,4 +17,5 @@ eureka:
   instance:
     ## 修改本地的hosts文件 ， 将localhost 指向本机
     hostname: localhost
+    prefer-ip-address: true
 
