--- a/domain/order/foodie-order-web/src/main/resources/application-dev.yml
+++ b/domain/order/foodie-order-web/src/main/resources/application-dev.yml
@@ -31,3 +31,31 @@ spring:
 mybatis:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+
+## Ribbon 全局配置 超时控制
+ribbon:
+  ConnectTimeout: 1000
+  ReadTimeout: 3000
+
+## Ribbon 指定服务配置超时判定， 优先级更高
+foodie-user-service:
+  ribbon:
+    ConnectTimeout: 1000
+    ReadTimeout: 3000
+    MaxAutoRetries: 1
+    MaxAutoRetriesNextServer: 2
+    OkToRetryOnAllOperations: true
+
+## Feign 的超时判定， 优先级高于Ribbon
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 1000
+        readTimeout: 5000
+      ## 优先级比上面高
+      foodie-user-service:
+        connectTimeout: 1000
+        readTimeout: 5000
+
