集成hystrix 一系列降级的配置[主要完成了order mycomments query 的降级]

--- a/domain/item/foodie-item-web/src/main/resources/application-dev.yml
+++ b/domain/item/foodie-item-web/src/main/resources/application-dev.yml
@@ -31,3 +31,19 @@ spring:
 mybatis:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+# actuator 暴露接口
+management:
+  endpoints:
+    web:
+      exposure:
+        # 生产中只需暴露指定端口
+        include: '*'
+        #include: health, info, xxx
+
+  endpoint:
+    health:
+      show-details: always
+
+#  security:
+#    enabled: false
