--- a/domain/user/foodie-user-service/pom.xml
+++ b/domain/user/foodie-user-service/pom.xml
@@ -24,6 +24,12 @@
             <artifactId>foodie-user-mapper</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
