--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>domain/shopcart/foodie-cart-web</module>
         <module>plateform/hystrix-turbine</module>
         <module>plateform/hystrix-dashboard</module>
+        <module>plateform/config-server</module>
     </modules>
 
     <packaging>pom</packaging>
